<resources>
    <string name="app_name">Archaeologica</string>
    <string name="hint_placemarkTitle">Site Title</string>
    <string name="hint_placemarkDescription">Description</string>
    <string name="button_addPlacemark">Add Site</string>
    <string name="menu_addPlacemark">Add</string>
    <string name="menu_cancelPlacemark">Cancel</string>
    <string name="enter_placemark_title">Please enter a Title!</string>
    <string name="save_placemark">Save Site</string>
    <string name="button_addImage">Add Image</string>
    <string name="select_placemark_image">Select Image</string>
    <string name="change_placemark_image">Change Image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="menu_deletePlacemark">Delete</string>
    <string name="title_activity_placemark_maps">Map of All Sites</string>
    <string name="placemark_image_placeholder">Site Image</string>
    <string name="placemark_title_placeholder">Site Title</string>
    <string name="placemark_description_placeholder">Site Description</string>
    <string name="menu_savePlacemark">Save</string>
    <string name="title_activity_placemark_list">Sites</string>
    <string name="title_activity_placemark">Site</string>
    <string name="title_activity_edit_location">Edit Location</string>
    <string name="location_dummy">00.000000</string>
    <string name="splashscreen">Splashscreen</string>
    <string name="Visited">visited</string>
    <string name="notVisited">not visited</string>
    <string name="title_activity_login">Login</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="title_activity_settings">Settings</string>
    <string name="user_header">User Data</string>
    <string name="sites_header">Sites</string>
    <string name="menu_saveSettings">Save</string>
    <string name="menu_searchPlacemark">Search</string>
    <string name="menu_MapPlacemarks">Map</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="menu_settingsPlacemark">Settings</string>
    <string name="fav">Favourite?</string>
    <string name="vis">visited?</string>
    <string name="nothing"/>
    <string name="additional_notes">Additional Notes …</string>
    <string name="menu_sharePlacemark">Share</string>
    <string name="menu_routePlacemark">Route</string>
    <string name="signature">© by Adrian Schön</string>
    <string name="menu_favsPlacemarks">Favourites</string>

</resources>
