<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.archaeologica.views.placemark.PlacemarkView">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      tools:layout_editor_absoluteX="-16dp">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

      <androidx.appcompat.widget.Toolbar
          android:id="@+id/toolbarAdd"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:titleTextColor="@color/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/appBarLayout"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp">


      <Button
          android:id="@+id/chooseImage"
          android:layout_width="376dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="8dp"
          android:background="@color/colorAccent"
          android:paddingTop="8dp"
          android:paddingBottom="8dp"
          android:text="@string/button_addImage"
          android:textColor="@color/colorPrimary"
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/description" />

      <EditText
          android:id="@+id/description"
          android:layout_width="250dp"
          android:layout_height="50dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="16dp"
          android:autofillHints="true"
          android:hint="@string/hint_placemarkDescription"
          android:inputType="text"
          android:maxLength="25"
          android:maxLines="1"
          android:padding="8dp"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="14sp"
          app:layout_constraintEnd_toStartOf="@+id/lat"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/placemarkTitle"
          tools:ignore="UnusedAttribute" />

      <EditText
          android:id="@+id/placemarkTitle"
          android:layout_width="350dp"
          android:layout_height="50dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="72dp"
          android:layout_marginEnd="8dp"
          android:autofillHints="true"
          android:hint="@string/hint_placemarkTitle"
          android:inputType="text"
          android:maxLength="25"
          android:maxLines="1"
          android:padding="8dp"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="14sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:ignore="UnusedAttribute">

        <requestFocus />
      </EditText>

      <TextView
          android:id="@+id/lat"
          android:layout_width="100dp"
          android:layout_height="20dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="8dp"
          android:text="@string/location_dummy"
          android:textAlignment="textEnd"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/description"
          app:layout_constraintTop_toBottomOf="@+id/placemarkTitle" />

      <TextView
          android:id="@+id/lng"
          android:layout_width="100dp"
          android:layout_height="20dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="10dp"
          android:layout_marginEnd="8dp"
          android:text="@string/location_dummy"
          android:textAlignment="textEnd"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/description"
          app:layout_constraintTop_toBottomOf="@+id/lat" />

      <ImageView
          android:id="@+id/placemarkImage"
          android:contentDescription="@string/hint_placemarkDescription"
          android:layout_width="376dp"
          android:layout_height="110dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="8dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/chooseImage"
          app:srcCompat="@mipmap/ic_launcher" />

      <com.google.android.gms.maps.MapView
          android:id="@+id/mapView"
          android:layout_width="376dp"
          android:layout_height="240dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/placemarkImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>


  </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>